# cpp-note

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: cppnote.cpp
src/editor/: texteditor.cpp  texteditor.hpp
src/ui/: buttonbar.cpp  buttonbar.hpp  cplusnote.ui  cppnote.ui  mainwindow.cpp  mainwindow.hpp
